<resources>
    <string name="app_name">TangoNoches New</string>

    <string name="login_scan">Отсканировать абонемент</string>

    <string name="lessons_block_title">Расписание уроков</string>
    <string name="lessons_no_events">Ближайших уроков нет</string>
    <string name="events_block_title">Расписание мероприятий</string>
    <string name="events_no_events">Ближайших мероприятий нет</string>
    <string name="see_all_items">ВСЕ</string>
    <string name="ticket_title">Абонемент для </string>
    <string name="ticket_until">Срок действия до</string>
    <string name="ticket_date">до 27.12.2019</string>
    <string name="ticket_lessons_all">до 27.12.2019</string>
    <string name="points_title">У Вас есть</string>
    <string name="points_placeholder">У Вас есть</string>
    <plurals name="points_value">
        <item quantity="one">%d бал</item>
        <item quantity="few">%d балла</item>
        <item quantity="many">%d баллов</item>
        <item quantity="other">%d баллов</item>
    </plurals>

    <string name="login_info">Введите код (ID) на вашей клубной карте, или отсканируйте штрихкод, нажав на кнопку справа</string>
    <string name="login_id_hint">Ваш код (ID)</string>
    <string name="login_password_hint">Ваш пароль</string>
    <string name="login_login">Войти</string>

    <string name="menu_item_qr">QR</string>
    <string name="menu_item_logout">Выйти</string>

    <string name="dialog_logout_title">Вы уверены, что хотите сменить абонемент?</string>
    <string name="dialog_logout_confirm">Сменить</string>
    <string name="dialog_logout_decline">Отмена</string>

    <string name="dialog_qr_instructions">Штрих-код необходим для списывания занятий преподавателем</string>
    <string name="dialog_qr_btn_close">Закрыть</string>

    <string name="points_info_title">Информация о баллах</string>
    <string name="points_info">Во вермя карантина вы можете по каждому из уроков присылать видеоотчёт в чат ВКонтакте с пометкой <font fgcolor='#6a57f4'><b>#ятреню</b></font> и номером урока.\n\nЗа каждый видеоотчёт начисляется 10 баллов. Баллы суммируются.\n\nЕсли хотите - присылайте отчёт лично <a href="https://vk.com/volochkov_anton">Антону</a> или <a href="https://vk.com/juliakorobko">Юле</a>. Раз в неделю будем публиковать таблицу лидеров по количеству баллов. По итогам после карантина баллы можно будет тратить в оффлайне, а победители получат особые призы от нас</string>
</resources>
