<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_logout_title_tv"
        android:text="@string/dialog_logout_title"
        android:layout_margin="@dimen/base_margin_half"
        app:layout_constraintStart_toStartOf="@id/dialog_logout_decline_btn"
        app:layout_constraintEnd_toEndOf="@id/dialog_logout_confirm_btn"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintEnd_toStartOf="@id/dialog_logout_confirm_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_logout_title_tv"
            android:id="@+id/dialog_logout_decline_btn"
            android:text="@string/dialog_logout_decline"
            android:layout_margin="@dimen/base_margin_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintStart_toEndOf="@id/dialog_logout_decline_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_logout_title_tv"
            android:id="@+id/dialog_logout_confirm_btn"
            android:text="@string/dialog_logout_confirm"
            android:layout_margin="@dimen/base_margin_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>