<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/act_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/act_login_info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:text="@string/login_info"
        android:textColor="@color/loginInfo"
        app:layout_constraintTop_toBottomOf="@id/act_login_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/act_login_id_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:hint="@string/login_id_hint"
        android:layout_marginEnd="@dimen/base_margin"
        android:textColorHint="@color/loginInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/act_login_scan_iv"
        app:layout_constraintTop_toBottomOf="@id/act_login_info_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@android:color/white"
            android:id="@+id/act_login_id_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/act_login_scan_iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/base_margin"
        app:layout_constraintBottom_toBottomOf="@id/act_login_id_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/act_login_id_til"
        app:srcCompat="@drawable/ic_menu_qr" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/act_login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/login_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>