<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/base_margin"
    android:paddingEnd="@dimen/base_margin_half"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/item_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bg_ticket_green" />

    <TextView
        android:id="@+id/item_ticket_tv_title_static"
        android:layout_marginStart="@dimen/base_margin"
        android:text="@string/ticket_title"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="@id/item_ticket"
        app:layout_constraintTop_toTopOf="@id/item_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/item_ticket_tv_title"
        android:layout_marginStart="@dimen/base_margin"
        tools:text="Танго"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@id/item_ticket_tv_title_static"
        app:layout_constraintTop_toTopOf="@id/item_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="12sp"
        android:textColor="@color/textColorWhiteHalf"
        android:id="@+id/item_ticket_tv_until"
        android:layout_marginStart="@dimen/base_margin"
        android:text="@string/ticket_until"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@id/item_ticket"
        app:layout_constraintTop_toBottomOf="@id/item_ticket_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/item_ticket_tv_until_date"
        android:layout_marginStart="@dimen/base_margin"
        android:text="@string/ticket_date"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/item_ticket"
        app:layout_constraintTop_toBottomOf="@id/item_ticket_tv_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/item_ticket_lessons_all"
        tools:text="/12"
        android:textColor="@color/textColorWhiteHalf"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="@id/item_ticket"
        app:layout_constraintTop_toTopOf="@id/item_ticket"
        app:layout_constraintEnd_toEndOf="@id/item_ticket"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/item_ticket_lessons_left"
        app:layout_constraintBottom_toBottomOf="@id/item_ticket"
        app:layout_constraintTop_toTopOf="@id/item_ticket"
        app:layout_constraintEnd_toStartOf="@id/item_ticket_lessons_all"
        tools:text="4"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>